--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
     "@popperjs/core": "^2.11.8",
+    "@rails/actioncable": "^7.1.3-4",
     "@reduxjs/toolkit": "^2.2.6",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
