--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,12 +4,12 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one:
+user_admin:
   id: 1
   email: "admin@mail.com"
 # column: value
 #
-two:
+user_random:
   id: 2
   email: "caba@mail.com"
 # column: value
